Задачи: 1.Добавить поле city для OrderResponse 2.Добавить функцию сохранения продукта по цвету в корзине и в избранных 3.Добавить тип NONE SIM и возможность выбора сразу двух 4.Покупка всех продуктов в корзине в один клик